infra/base/apps/forge-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forge-frontend
  namespace: todde
spec:
  selector:
    app: forge-frontend
  ports:
    - port: 80
      targetPort: 3000
