infra/base/apps/forge-frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forge-frontend
  namespace: todde
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: toddemanos.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: forge-frontend
                port:
                  number: 80
